# Aether-Validator

./: .aether.toml  .gitignore  Cargo.toml  LICENSE  README.md  aether.yaml  install.ps1  install.sh  temp_validate.txt  temp_validate2.txt  temp_validate3.txt  test_hook.txt
.aether/: code_graph.json  (+3 more)
crates/aether-api/: Cargo.toml
crates/aether-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
crates/aether-certification/: Cargo.toml
crates/aether-certification/src/: certificate.rs  chain.rs  error.rs  lib.rs  revocation.rs  signer.rs  storage.rs
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: main.rs  platforms.rs  ui.rs
crates/aether-cli/src/commands/: analyze.rs  certify.rs  contracts.rs  drift.rs  executor.rs  hooks.rs  init.rs  keypair.rs  learn.rs  list.rs  memory.rs  mod.rs  postprocess.rs  rag.rs  state.rs  validate.rs  verify.rs
crates/aether-cli/src/tui/: app.rs  config_screen.rs  mcp_screen.rs  memory_screen.rs  mod.rs  ui.rs
crates/aether-cli/tests/: cli_integration.rs  mcp_integration.rs
crates/aether-contracts/: Cargo.toml
crates/aether-contracts/contracts/: glsl.yaml  wasm.yaml
crates/aether-contracts/src/: contract.rs  error.rs  evaluator.rs  lib.rs  loader.rs  pattern.rs  registry.rs
crates/aether-contracts/tests/: python_ai_mistakes.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: config.rs  error.rs  lib.rs  orchestrator.rs  session.rs
crates/aether-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/aether-desktop/src-tauri/src/: auto_fix.rs  commands.rs  config.rs  lib.rs  main.rs  state.rs  validation_service.rs
crates/aether-intelligence/: Cargo.toml
crates/aether-intelligence/src/: contract_generator.rs  dubbioso.rs  dubbioso_patterns.rs  dubbioso_validator.rs  error.rs  learner.rs  lib.rs  tree_sitter_parser.rs
crates/aether-intelligence/src/compliance/: README.md  classifier.rs  decision.rs  engine.rs  exemptions.rs  mod.rs
crates/aether-intelligence/src/drift/: git_integration.rs
crates/aether-intelligence/src/intent/: mod.rs
crates/aether-intelligence/src/knowledge/: stub_loader.rs
crates/aether-intelligence/src/memory/: README.md  architectural_drift.rs  decision_log.rs  drift_snapshots.rs  git_store.rs  hierarchy.rs  mod.rs  presets.rs  project_config.rs  project_context.rs  retrieval.rs  scope.rs  store.rs  tier.rs
crates/aether-intelligence/src/patterns/: anomaly.rs  mod.rs
crates/aether-intelligence/src/semantic_search/: embeddings.rs  mod.rs  tfidf.rs  vector.rs
crates/aether-intelligence/tests/: e2e_integration_scenarios.rs  e2e_memory_driven.rs
crates/aether-mcp/: Cargo.toml
crates/aether-mcp/docs/: MCP_TOOLS.md  certification.md  contracts.md  languages.md  quickstart.md
crates/aether-mcp/examples/: certification.md
crates/aether-mcp/src/: main.rs
crates/aether-mcp/src/prompts/: templates.rs
crates/aether-mcp/src/resources/: config.rs  contracts.rs  exemptions.rs  mod.rs
crates/aether-mcp/src/tools/: analysis.rs  compliance.rs  graph.rs  mod.rs  validation.rs  watch.rs
crates/aether-mcp/templates/: python-contract.md  rust-contract.md
crates/aether-neural/: Cargo.toml  build.rs
crates/aether-neural/src/: error.rs  inference.rs  lib.rs  model_registry.rs  orchestrator.rs
crates/aether-neural/src/features/: cpg.rs  mod.rs
crates/aether-neural/src/models/: code_reasoner.rs  drift_predictor.rs  mod.rs  pattern_memory.rs
crates/aether-neural/tests/: e2e_pipeline.rs
crates/aether-parsers/: Cargo.toml
crates/aether-parsers/benches/: parser_benchmark.rs
crates/aether-parsers/src/: ast.rs  ast_matcher.rs  bash.rs  c.rs  cmake.rs  cpp.rs  css.rs  cuda.rs  glsl.rs  go.rs  graphql.rs  html.rs  java.rs  javascript.rs  json.rs  lex.rs  lib.rs  lua.rs  markdown.rs  parser.rs  prism.rs  registry.rs  rust.rs  scss.rs  sql.rs  toml.rs  typescript.rs
crates/aether-sdk/: Cargo.toml
crates/aether-sdk/src/: client.rs  error.rs  lib.rs
crates/aether-validation/: Cargo.toml
crates/aether-validation/benches/: validation_benchmark.rs
crates/aether-validation/src/: feedback.rs  layer.rs  lib.rs  pipeline.rs  violation.rs
crates/aether-validation/tests/: checked_unwrap_test.rs  e2e_validation.rs
crates/synward-api/: Cargo.toml
crates/synward-api/src/: auth.rs  handlers.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs
crates/synward-cli/: Cargo.toml
crates/synward-cli/.aether/: code_graph.json
crates/synward-cli/src/: main.rs  platforms.rs  ui.rs
crates/synward-cli/tests/: cli_integration.rs  mcp_integration.rs
crates/synward-contract-importer/: Cargo.toml
crates/synward-contract-importer/src/: clippy.rs  cwe.rs  eslint.rs  lib.rs  main.rs  merger.rs  output.rs  owasp.rs  pylint.rs  styleguide.rs
crates/synward-contract-importer/tests/: import_test.rs
crates/synward-contracts/: Cargo.toml
crates/synward-contracts/contracts/: embedded.yaml  python.yaml  rust.yaml
crates/synward-contracts/src/: contract.rs  evaluator.rs  lib.rs  pattern.rs  registry.rs
crates/synward-contracts/tests/: python_ai_mistakes.rs
crates/synward-core/: Cargo.toml
crates/synward-core/src/: config.rs  error.rs  lib.rs  orchestrator.rs  pipeline.rs
crates/synward-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/synward-mcp/: Cargo.toml
crates/synward-mcp/docs/: MCP_TOOLS.md  certification.md  contracts.md  languages.md  quickstart.md
crates/synward-mcp/examples/: certification.md  validation.md
crates/synward-mcp/src/: main.rs
crates/synward-mcp/templates/: python-contract.md  rust-contract.md
crates/synward-parsers/: Cargo.toml
crates/synward-parsers/benches/: parser_benchmark.rs
crates/synward-parsers/src/: error.rs  lex.rs  lib.rs  notebook.rs  parser.rs  python.rs  yaml.rs
crates/synward-sdk/: Cargo.toml
crates/synward-sdk/src/: client.rs  lib.rs  types.rs
crates/synward-validation/: Cargo.toml
crates/synward-validation/benches/: validation_benchmark.rs
crates/synward-validation/src/: context.rs  feedback.rs  layer.rs  lib.rs
crates/synward-validation/tests/: checked_unwrap_test.rs  e2e_validation.rs
(+420 files in other folders)
