# Aether — Code Validation & Certification
# Workspace configuration

[workspace]
resolver = "2"
members = [
    "crates/aether-core",
    "crates/aether-parsers",
    "crates/aether-validation",
    "crates/aether-contracts",
    "crates/aether-certification",
    "crates/aether-api",
    "crates/aether-sdk",
    "crates/aether-cli",
    "crates/aether-mcp",
    "crates/aether-mcp-test",
    "crates/aether-intelligence",
    "crates/aether-contract-importer",
    "crates/aether-neural",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["David <david@imperium.dev>"]
license = "BUSL-1.1"
# Change License: AGPL-3.0-only (effective 2029-04-01)
repository = "https://github.com/David-Imperium/aether"

[workspace.dependencies]
# Parser
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
tree-sitter = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP (for interfaces)
axum = "0.7"
tower = "0.4"

# Testing
criterion = "0.5"
pretty_assertions = "1.4"
regex = "1.10"

# === AETHER INTELLIGENCE (Phase 11-15) ===
# Light mode: no ML deps, rule-based algorithms

# HTTP client (for external LLM APIs - optional)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Cache (memory layer)
lru = "0.13"

# Git integration (drift detection)
git2 = "0.19"

# File walking (drift detection)
walkdir = "2.4"

# Concurrency
parking_lot = "0.12"

# TUI (terminal user interface)
ratatui = "0.28"
crossterm = "0.28"

# === AETHER NEURAL (Phase Neural Native) ===
# Burn framework — backend-agnostic ML inference (pre-release: ONNX import only available in 0.21+)
burn = { version = "0.21.0-pre.2" }
burn-store = { version = "0.21.0-pre.2", features = ["burnpack"] }
burn-onnx = { version = "0.21.0-pre.1" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
