[package]
name = "aether-cli"
version = "0.1.0"
edition = "2021"
description = "Aether CLI - Real-time code validator and certifier"
authors = ["David"]

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
aether-core = { path = "../aether-core" }
aether-sdk = { path = "../aether-sdk" }
aether-parsers = { path = "../aether-parsers" }
aether-validation = { path = "../aether-validation" }
aether-certification = { path = "../aether-certification" }
aether-contracts = { path = "../aether-contracts" }
aether-intelligence = { path = "../aether-intelligence", optional = true, features = ["patterns"] }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
colored = "2"
anyhow = "1"
dirs = "5"
hex = "0.4"
inquire = "0.7"
reqwest = { version = "0.12", features = ["json"] }
which = "6"
walkdir = "2"
chrono = "0.4"
ratatui = { workspace = true }
crossterm = { workspace = true }
toml = "0.8"
tracing = "0.1"

[features]
default = ["intelligence"]
intelligence = ["aether-intelligence", "aether-validation/aether-intelligence"]
intent-api = ["aether-intelligence/intent-api", "aether-validation/intent-api"]
drift = ["aether-intelligence/drift", "aether-validation/drift"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
