[package]
name = "aether-contracts"
description = "Contract engine for Aether"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aether-parsers = { path = "../aether-parsers" }
aether-validation = { path = "../aether-validation" }
async-trait = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
