[package]
name = "aether-intelligence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aether Intelligence - AI-powered code validation layers (Light Mode)"

[dependencies]
# Core deps (always included)
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }

# Memory (Layer 2) - Lightweight
lru = { workspace = true }

# Knowledge - Lightweight YAML parsing
serde_yaml = { workspace = true }

# TOML support for memory storage
toml = { workspace = true }

# Pattern Discovery (Layer 3) - Rule-based, no ML deps
# Uses simple algorithms: Jaccard similarity, TF-IDF, regex patterns
regex = { workspace = true }

# Tree-Sitter for AST-based parsing
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }

# Intent Inference (Layer 4) - External API only (no local models)
reqwest = { workspace = true, optional = true }

# Drift Detection (Layer 5) - Git integration
git2 = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

# Semantic Search (Phase 4) - Local embeddings with candle-transformers
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.21", optional = true }
hf-hub = { version = "0.4", optional = true }

[features]
# Default: Light mode (memory + knowledge only)
default = ["memory"]

# Layer 2: Semantic Memory
memory = []

# Layer 3: Pattern Discovery (rule-based, lightweight)
patterns = []

# Tree-Sitter for AST-based parsing
tree-sitter = ["dep:tree-sitter", "dep:tree-sitter-rust"]

# Multi-language tree-sitter support
tree-sitter-multi = [
    "tree-sitter",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-java",
    "dep:tree-sitter-cpp",
]

# Layer 4: Intent via external API (optional)
intent-api = ["reqwest"]

# Layer 5: Drift Detection with git
drift = ["git2", "walkdir", "patterns"]

# Phase 4: Semantic Search with candle-transformers
semantic-search = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "hf-hub"]

# Full: all optional features
full = ["memory", "patterns", "intent-api", "drift", "semantic-search"]

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3.10"
