[package]
name = "aether-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
aether-validation = { path = "../aether-validation" }
aether-parsers = { path = "../aether-parsers" }
aether-certification = { path = "../aether-certification" }
aether-contracts = { path = "../aether-contracts" }
aether-intelligence = { path = "../aether-intelligence" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = "5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tree-sitter = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
chrono = { workspace = true }
