[package]
name = "aether-neural"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aether Neural — Burn-based inference for neuro-symbolic code analysis"

[dependencies]
# Burn framework — backend-agnostic ML inference
burn = { workspace = true }
# Burn weights storage (burnpack format)
burn-store = { workspace = true }

# Core deps
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Reuse CPG types from aether-intelligence (memory feature needed for CPG re-exports)
aether-intelligence = { path = "../aether-intelligence", features = ["memory"] }

# Optional: tree-sitter for runtime CPG extraction
tree-sitter = { workspace = true, optional = true }

# Optional: ONNX Runtime fallback (for unsupported ops, pre-release)
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.16", optional = true }

[build-dependencies]
# Burn ONNX code generator (replaces deprecated burn-import)
burn-onnx = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = { workspace = true }

[features]
# Default: NdArray backend (CPU, no GPU dependency)
default = ["backend-ndarray"]

# NdArray backend — pure CPU, portable
backend-ndarray = ["burn/ndarray"]

# WGPU backend — GPU-accelerated (requires Vulkan/Metal/DirectX)
backend-wgpu = ["burn/wgpu"]

# Candle backend — HuggingFace Candle, good for transformer models
backend-candle = ["burn/candle"]

# ONNX Runtime fallback — for ops not supported by Burn's codegen
onnx-fallback = ["dep:ort", "dep:ndarray"]

# Tree-sitter CPG extraction at inference time
tree-sitter = ["dep:tree-sitter", "aether-intelligence/tree-sitter"]
