[package]
name = "aether-parsers"
description = "Parser implementations for Aether"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

# Tree-sitter grammars (use latest compatible versions)
# Note: Some grammars are at 0.23.x, others at 0.24/0.25
# All should be compatible with tree-sitter 0.24+
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
criterion = "0.5"

[[bench]]
name = "parser_benchmark"
harness = false
