[package]
name = "aether-validation"
description = "Validation layers for Aether"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aether-parsers = { path = "../aether-parsers" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "validation_benchmark"
harness = false
