[package]
name = "aether-validation"
description = "Validation layers for Aether"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Base feature: enables aether-intelligence dependency
aether-intelligence = ["dep:aether-intelligence"]
# Intelligence layer features (forwarded to aether-intelligence)
memory = ["aether-intelligence", "aether-intelligence/memory"]
patterns = ["aether-intelligence", "aether-intelligence/patterns"]
intent-api = ["aether-intelligence", "aether-intelligence/intent-api"]
drift = ["aether-intelligence", "aether-intelligence/drift"]
# Full intelligence mode
intelligence-full = ["memory", "patterns", "intent-api", "drift"]

[dependencies]
aether-parsers = { path = "../aether-parsers" }
aether-intelligence = { path = "../aether-intelligence", optional = true }
tree-sitter = { workspace = true }
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
which = "6"


[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "validation_benchmark"
harness = false
