[package]
name = "synward-contract-importer"
version = "0.1.0"
edition = "2021"
description = "Import contracts from human-authored sources (Clippy, ESLint, Pylint, CWE/OWASP)"

[[bin]]
name = "synward-import"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
scraper = "0.19"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.10"
