[package]
name = "synward-core"
description = "Core types and orchestrator for Synward validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
synward-validation = { path = "../synward-validation" }
synward-contracts = { path = "../synward-contracts" }
synward-certification = { path = "../synward-certification" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
