[package]
name = "synward-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io"] }
synward-validation = { path = "../synward-validation" }
synward-parsers = { path = "../synward-parsers" }
synward-certification = { path = "../synward-certification" }
synward-contracts = { path = "../synward-contracts" }
synward-intelligence = { path = "../synward-intelligence" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = "5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tree-sitter = { workspace = true }
sha2 = "0.10"
base64 = "0.22"
chrono = { workspace = true }
