[package]
name = "synward-parsers"
description = "Parser implementations for Synward"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

# Tree-sitter grammars (use latest compatible versions)
# Note: Some grammars are at 0.23.x, others at 0.24/0.25
# All should be compatible with tree-sitter 0.24+
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
# New languages (using correct versions from crates.io)
tree-sitter-c = "0.24"
tree-sitter-glsl = "0.2"
tree-sitter-css = "0.25"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
# Additional languages (alternative crates with better compatibility)
tree-sitter-toml-ng = "0.7"   # Alternative to tree-sitter-toml
tree-sitter-cmake = "0.7"     # Uses LanguageFn - compatible via .into()
tree-sitter-cuda = "0.21"     # Uses LanguageFn - compatible via .into()
tree-sitter-sequel = "0.3.11"
tree-sitter-graphql = "0.1.0"
tree-sitter-md = "0.5.3"
tree-sitter-bash = "0.25.1"

# Still incompatible (MSVC build issues - requires Zig):
# tree-sitter-scss = "1.0"   # NOT COMPATIBLE WITH MSVC - uses GCC flags

[build-dependencies]
cc = "1.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
criterion = "0.5"

[[bench]]
name = "parser_benchmark"
harness = false
