[package]
name = "synward-validation"
description = "Validation layers for Synward"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
# Base feature: enables synward-intelligence dependency
synward-intelligence = ["dep:synward-intelligence"]
# Intelligence layer features (forwarded to synward-intelligence)
memory = ["synward-intelligence", "synward-intelligence/memory"]
patterns = ["synward-intelligence", "synward-intelligence/patterns"]
intent-api = ["synward-intelligence", "synward-intelligence/intent-api"]
drift = ["synward-intelligence", "synward-intelligence/drift"]
# Full intelligence mode
intelligence-full = ["memory", "patterns", "intent-api", "drift"]

[dependencies]
synward-parsers = { path = "../synward-parsers" }
synward-intelligence = { path = "../synward-intelligence", optional = true }
tree-sitter = { workspace = true }
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
which = "6"


[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "validation_benchmark"
harness = false
